# rohans-weblog

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN_REFS.md  Dockerfile  HOSTINGER_SETUP.md  Procfile  README.md  RENAME_INSTRUCTIONS.md  RENDER_SETUP.md  build.sh  claude.md  deploy-docker.sh  deploy.sh  docker-compose.yml  manage.py  nginx.conf  nginx.http-only.conf  package-lock.json  pyproject.toml  render.yaml  requirements.txt  setup-ssl.sh
.claude/commands/: scan.md
.github/workflows/: ci.yml  deploy.yml
blog/: admin.py  context_processors.py  models.py  product_updates.py  search.py  tests.py  urls.py  utils.py  views.py
blog/management/commands/: import_posts.py  import_tils.py  sync_gumroad_products.py
blog/migrations/: 0001_initial.py  0002_alter_bookmark_options_alter_blogpost_is_published.py  0003_feeditem.py  0004_productupdate.py
blog/templates/blog/: about.html  base.html  bookmarks_list.html  feed_detail.html  feed_list.html  index.html  post_detail.html  products_list.html  search.html  tag_detail.html  til_detail.html  til_list.html
content/posts/: build-nlp-apps.md  learn-pytorch.md  list-large-folders.md  new-mac-setup.md  old-paradigms.md  organize-your-computer.md  slow-productivity.md  stable-diffusion-staying-put.md  yaml-syntax.md
rohans-weblog/: asgi.py  settings.py  urls.py
rohans_weblog/: asgi.py  settings.py  urls.py  wsgi.py
