[project]
name = "rohans-weblog"
version = "0.1.0"
description = "Rohan Singh's Weblog - Django blog"
requires-python = ">=3.10"
dependencies = [
    "bleach[css]>=6.0",
    "dj-database-url>=2.1.0",
    "django>=5.0",
    "gunicorn>=21.0",
    "markdown>=3.5",
    "psycopg2-binary>=2.9.0",
    "whitenoise[brotli]>=6.6.0",
    "pymdown-extensions>=10.0",
    "python-frontmatter>=1.0",
    "pygments>=2.0",
    "martor>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.12.0",
    "ruff>=0.9.0",
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
]

[tool.setuptools.packages.find]
include = ["rohans_weblog*", "blog*"]
